force-app/main/default/objects/Budget__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <description>Name of Budget Year</description>
    <label>Budget Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY 2009</fullName>
            </value>
            <value>
                <fullName>FY 2010</fullName>
            </value>
            <value>
                <fullName>FY 2011</fullName>
            </value>
            <value>
                <fullName>FY 2012</fullName>
            </value>
            <value>
                <fullName>FY 2013</fullName>
            </value>
            <value>
                <fullName>FY 2014</fullName>
            </value>
            <value>
                <fullName>FY 2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>