force-app/main/default/objects/Budget__c/fields/Consolidation_Account__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Account__c</fullName>
    <formula>Account__r.Consolidation_Account__c</formula>
    <label>Consolidation Account</label>
    <type>Text</type>
</CustomField>