force-app/main/default/objects/Budget__c/fields/End_customer__c.field-meta.xml
<CustomField>
    <fullName>End_customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budgets (End customer)</relationshipLabel>
    <relationshipName>Budgets1</relationshipName>
    <type>Lookup</type>
</CustomField>