force-app/main/default/objects/Budget__c/fields/Forecast_Unit__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Unit</label>
    <referenceTo>Forecast_Unit__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>