force-app/main/default/objects/Budget__c/fields/FY_Budget_Optimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>FY_Budget_Optimum_Qty__c</fullName>
    <label>FY Budget Optimum Qty</label>
    <summarizedField>Budget_Position__c.Optimum_Qty__c</summarizedField>
    <summaryForeignKey>Budget_Position__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>