force-app/main/default/objects/Budget__c/fields/FY_Budget_Sales__c.field-meta.xml
<CustomField>
    <fullName>FY_Budget_Sales__c</fullName>
    <formula>FY_Budget_Qty__c * Price_pcs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Budget Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>