force-app/main/default/objects/Budget__c/fields/Global_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager__c</fullName>
    <formula>Account__r.Global_Account_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Account Manager</label>
    <type>Text</type>
</CustomField>