force-app/main/default/objects/Budget__c/fields/In_CHF_at_const_exch_rate__c.field-meta.xml
<CustomField>
    <fullName>In_CHF_at_const_exch_rate__c</fullName>
    <formula>In_USD_at_const_exch_rate__c  *  USDtoCHFconstexchrate__c</formula>
    <label>In CHF at const exch rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>