force-app/main/default/objects/Budget__c/fields/In_USD_at_const_exch_rate__c.field-meta.xml
<CustomField>
    <fullName>In_USD_at_const_exch_rate__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;EUR&quot;, $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;, $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;CHF&quot;, $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1.00) * FY_Budget_Sales__c</formula>
    <label>In USD at const exch rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>