force-app/main/default/objects/Budget__c/fields/Price_pcs__c.field-meta.xml
<CustomField>
    <fullName>Price_pcs__c</fullName>
    <label>Price / pcs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>