force-app/main/default/objects/Budget__c/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <formula>TEXT(Account__r.Reporting_Area__c)</formula>
    <label>Reporting Area</label>
    <type>Text</type>
</CustomField>