force-app/main/default/objects/Budget__c/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <formula>TEXT(Account__r.Reporting_Region__c)</formula>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>