force-app/main/default/objects/Budget__c/fields/USDtoCHFconstexchrate__c.field-meta.xml
<CustomField>
    <fullName>USDtoCHFconstexchrate__c</fullName>
    <formula>1 / $Setup.Constant_Exchange_Rates__c.USD2CHF__c</formula>
    <label>USDtoCHF const exch rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>