force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Budget_Year__c</columns>
    <columns>FY_Budget_Qty__c</columns>
    <columns>FY_Budget_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>en_US</language>
</ListView>